--- a/budget.css
+++ b/budget.css
@@ -1,1 +1,69 @@
 /* CSS declarations go here */
+body{
+	  font-family: 'Georgia';
+  /*background-image: url("https://newevolutiondesigns.com/images/freebies/city-wallpaper-32.jpg"); */
+  -webkit-background-size: 100% auto;
+  -moz-background-size: 100% auto;
+  background-size: 100% auto;
+  color: #444;
+}
+
+
+div#intro h1{
+
+  font-family: Arial;
+  color: #5A76CC;
+  font-size: 50px;
+  text-align: center;
+/*
+   * Note the use of the `main-color`
+   * variable and the `darken` function
+   */
+  text-shadow: 0px -1px 0px #C4C7C9;
+}
+
+form>div{
+	width:300px;
+	padding:10px;
+	border-radius:10px;
+	border:3px solid #70B8FF;
+}
+h6{
+	font-family: Arial;
+	font-size:25px;
+	color: #70B8FF;
+	padding:0px;
+	margin:10px;
+}
+input{
+	display: inline;
+	font-size:25px;
+  background: transparent;
+  border: !important;
+  border: 2px solid #70B8FF;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  width: 200px;
+  height:30px;
+  padding:0px;
+  color:#5A76CC;
+}
+input:focus{
+	background:#E0F0FF;
+}
+
+#login-button{
+	font-family: Arial;
+	font-size:25px;
+	font-weight:bold;
+	color: #70B8FF;
+	padding:0px;
+	margin:10px;
+	margin:30px;
+	height:40px;
+	border-radius:5px;
+}
+
+#login-button:hover{
+	background:#E0F0FF;
+}
