--- a/budget.css
+++ b/budget.css
@@ -1,7 +1,7 @@
 /* CSS declarations go here */
 body{
 	  font-family: 'Georgia';
-  /*background-image: url("https://newevolutiondesigns.com/images/freebies/city-wallpaper-32.jpg"); */
+  background-image: url("https://newevolutiondesigns.com/images/freebies/city-wallpaper-32.jpg"); 
   -webkit-background-size: 100% auto;
   -moz-background-size: 100% auto;
   background-size: 100% auto;
@@ -22,16 +22,18 @@ div#intro h1{
   text-shadow: 0px -1px 0px #C4C7C9;
 }
 
+
 form>div{
 	width:300px;
 	padding:10px;
 	border-radius:10px;
-	border:3px solid #70B8FF;
+	border:3px solid #6666FF;
+	background:rgba(226, 241, 255,0.5);
 }
 h6{
 	font-family: Arial;
 	font-size:25px;
-	color: #70B8FF;
+	color: #6666FF;
 	padding:0px;
 	margin:10px;
 }
@@ -40,7 +42,7 @@ input{
 	font-size:25px;
   background: transparent;
   border: !important;
-  border: 2px solid #70B8FF;
+  border: 2px solid #6666FF;
   -webkit-border-radius: 5px;
   border-radius: 5px;
   width: 200px;
@@ -56,7 +58,8 @@ input:focus{
 	font-family: Arial;
 	font-size:25px;
 	font-weight:bold;
-	color: #70B8FF;
+	color: #6666FF;
+	background: #E0F0FF;
 	padding:0px;
 	margin:10px;
 	margin:30px;
@@ -65,5 +68,5 @@ input:focus{
 }
 
 #login-button:hover{
-	background:#E0F0FF;
+	background:#FFFFFF;
 }
