--- a/budget.css
+++ b/budget.css
@@ -6,20 +6,32 @@ body{
   -moz-background-size: 100% auto;
   background-size: 100% auto;
   color: #444;
+  width:100%;
+  height:100%;
+
+
 }
 
 
 div#intro h1{
-
+  margin-top:-15px;
+ background: -moz-linear-gradient(top, rgba(30,87,153,1) 0%, rgba(125,185,232,0) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(30,87,153,1)), color-stop(100%,rgba(125,185,232,0))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top, rgba(30,87,153,1) 0%,rgba(125,185,232,0) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top, rgba(30,87,153,1) 0%,rgba(125,185,232,0) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top, rgba(30,87,153,1) 0%,rgba(125,185,232,0) 100%); /* IE10+ */
+background: linear-gradient(to bottom, rgba(30,87,153,1) 0%,rgba(125,185,232,0) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#007db9e8',GradientType=0 );
   font-family: Arial;
-  color: #5A76CC;
+  color: #C4C7C9;
   font-size: 50px;
   text-align: center;
+  padding:20px;
 /*
    * Note the use of the `main-color`
    * variable and the `darken` function
    */
-  text-shadow: 0px -1px 0px #C4C7C9;
+  text-shadow: 0px -1px 0px #5A76CC;
 }
 
 
@@ -69,4 +81,41 @@ input:focus{
 
 #login-button:hover{
 	background:#FFFFFF;
+}
+
+#cssmenu ul{
+	list-style: none;
+	float:right;
+	font-family: Arial;
+	font-size:25px;
+	font-weight:bold;
+	color: #1F1F5C;
+	background: rgba(153, 204, 255,0.6);
+	padding:10px;
+	margin:10px;
+	margin:30px;
+	border-radius:5px;
+	border: 2px solid #1F1F5C;
+}
+
+#cssmenu ul li{
+	list-style: none;
+	text-decoration: none;
+	margin:5px;
+	padding:10px;
+	color: #1F1F5C;
+
+}
+#cssmenu ul li a{
+	text-decoration: none;
+	color: #1F1F5C;
+	padding-top:10px;
+	padding-bottom: 10px;
+}
+#cssmenu ul li a:hover{
+	list-style: none;
+	text-decoration: none;
+	color: #008A8A;
+	border-radius:10px;
+	background: rgba(204, 230, 255,0.5);
 }
