--- a/budget.css
+++ b/budget.css
@@ -97,7 +97,9 @@ input:focus{
 	border-radius:5px;
 	border: 2px solid #1F1F5C;
 }
-
+input.error{
+    background-color:rgb(255, 231, 231);
+}
 #cssmenu ul li{
 	list-style: none;
 	text-decoration: none;
